Release 24w38a (snapshot)