@@ -1,94 +1,95 @@
-import com.mojang.datafixers.util.Either;
-import io.netty.buffer.ByteBuf;
-import java.net.URI;
+import com.google.common.collect.ImmutableList;
+import com.mojang.brigadier.CommandDispatcher;
+import com.mojang.logging.LogUtils;
+import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
-import java.util.function.IntFunction;
+import net.minecraft.server.MinecraftServer;
+import org.slf4j.Logger;
 
-public record ama(List<ama.a> d) {
-   public static final ama a = new ama(List.of());
-   public static final zg<ByteBuf, Either<ama.b, xi>> b = ze.a(ama.b.k, xk.f);
-   public static final zg<ByteBuf, List<ama.c>> c = ama.c.a.a(ze.a());
+public class ama {
+   private static final Logger a = LogUtils.getLogger();
+   private static final all b = all.b("tick");
+   private static final all c = all.b("load");
+   private final MinecraftServer d;
+   private List<ik<ew>> e = ImmutableList.of();
+   private boolean f;
+   private alz g;
 
-   public boolean a() {
-      return this.d.isEmpty();
+   public ama(MinecraftServer $$0, alz $$1) {
+      this.d = $$0;
+      this.g = $$1;
+      this.b($$1);
    }
 
-   public Optional<ama.a> a(ama.b $$0) {
-      return this.d.stream().filter($$1 -> (Boolean)$$1.a.map($$1x -> $$1x == $$0, $$0xx -> false)).findFirst();
+   public CommandDispatcher<ew> a() {
+      return this.d.aG().a();
    }
 
-   public List<ama.c> b() {
-      return this.d.stream().map($$0 -> new ama.c($$0.a, $$0.b.toString())).toList();
-   }
+   public void b() {
+      if (this.d.aP().i()) {
+         if (this.f) {
+            this.f = false;
+            Collection<ik<ew>> $$0 = this.g.b(c);
+            this.a($$0, c);
+         }
 
-   public List<ama.a> c() {
-      return this.d;
-   }
-
-   public static record a(Either<ama.b, xi> a, URI b) {
-
-      public static ama.a a(ama.b $$0, URI $$1) {
-         return new ama.a(Either.left($$0), $$1);
-      }
-
-      public static ama.a a(xi $$0, URI $$1) {
-         return new ama.a(Either.right($$0), $$1);
-      }
-
-      public xi a() {
-         return (xi)this.a.map(ama.b::a, $$0 -> $$0);
-      }
-
-      public Either<ama.b, xi> b() {
-         return this.a;
-      }
-
-      public URI c() {
-         return this.b;
+         this.a(this.e, b);
       }
    }
 
-   public static enum b {
-      a(0, "report_bug"),
-      b(1, "community_guidelines"),
-      c(2, "support"),
-      d(3, "status"),
-      e(4, "feedback"),
-      f(5, "community"),
-      g(6, "website"),
-      h(7, "forums"),
-      i(8, "news"),
-      j(9, "announcements");
+   private void a(Collection<ik<ew>> $$0, all $$1) {
+      boq.a().a($$1::toString);
 
-      private static final IntFunction<ama.b> l = ayb.a($$0 -> $$0.m, values(), ayb.a.a);
-      public static final zg<ByteBuf, ama.b> k = ze.a(l, $$0 -> $$0.m);
-      private final int m;
-      private final String n;
-
-      private b(final int $$0, final String $$1) {
-         this.m = $$0;
-         this.n = $$1;
+      for (ik<ew> $$2 : $$0) {
+         this.a($$2, this.c());
       }
 
-      private xi a() {
-         return xi.c("known_server_link." + this.n);
-      }
+      boq.a().c();
+   }
 
-      public ama.a a(URI $$0) {
-         return ama.a.a(this, $$0);
+   public void a(ik<ew> $$0, ew $$1) {
+      bor $$2 = boq.a();
+      $$2.a(() -> "function " + $$0.a());
+
+      try {
+         im<ew> $$3 = $$0.a(null, this.a());
+         ex.a($$1, $$2x -> hw.a($$2x, $$3, $$1, et.a));
+      } catch (ez var9) {
+      } catch (Exception var10) {
+         a.warn("Failed to execute function {}", $$0.a(), var10);
+      } finally {
+         $$2.c();
       }
    }
 
-   public static record c(Either<ama.b, xi> b, String c) {
-      public static final zg<ByteBuf, ama.c> a = zg.a(ama.b, ama.c::a, ze.m, ama.c::b, ama.c::new);
+   public void a(alz $$0) {
+      this.g = $$0;
+      this.b($$0);
+   }
 
-      public Either<ama.b, xi> a() {
-         return this.b;
-      }
+   private void b(alz $$0) {
+      this.e = List.copyOf($$0.b(b));
+      this.f = true;
+   }
 
-      public String b() {
-         return this.c;
-      }
+   public ew c() {
+      return this.d.aH().a(2).a();
+   }
+
+   public Optional<ik<ew>> a(all $$0) {
+      return this.g.a($$0);
+   }
+
+   public List<ik<ew>> b(all $$0) {
+      return this.g.b($$0);
+   }
+
+   public Iterable<all> d() {
+      return this.g.a().keySet();
+   }
+
+   public Iterable<all> e() {
+      return this.g.b();
    }
 }
