@@ -1,13 +1,22 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
+import java.util.function.UnaryOperator;
 
-public enum gck {
-   a,
-   b;
+public class gck {
+   private final gcm a;
 
-   private static final List<gck> c = List.of(values());
-   private static final ke.b d = ke.a(ly.az);
+   public gck() {
+      this(new gcm(ImmutableList.of(), gce.a));
+   }
 
-   public static jx<gck> a() {
-      return new jx<>(c).a(a, d);
+   private gck(gcm $$0) {
+      this.a = $$0;
+   }
+
+   public gcm a() {
+      return this.a;
+   }
+
+   public gck a(UnaryOperator<gce> $$0) {
+      return new gck(this.a.a($$0));
    }
 }
