@@ -1,119 +1,270 @@
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
 public class rk {
-   public static void a(qy<elx> $$0) {
-      jr<dgc> $$1 = $$0.a(lz.aG);
-      jr<enh> $$2 = $$0.a(lz.aV);
+   public static final alk<enl> a = ri.a("village/savanna/town_centers");
+   private static final alk<enl> b = ri.a("village/savanna/terminators");
+   private static final alk<enl> c = ri.a("village/savanna/zombie/terminators");
+
+   public static void a(rb<enl> $$0) {
+      jr<elf> $$1 = $$0.a(ma.aR);
+      jq<elf> $$2 = $$1.b(su.g);
+      jq<elf> $$3 = $$1.b(su.a);
+      jq<elf> $$4 = $$1.b(su.b);
+      jr<eqb> $$5 = $$0.a(ma.aT);
+      jq<eqb> $$6 = $$5.b(rj.b);
+      jq<eqb> $$7 = $$5.b(rj.j);
+      jq<eqb> $$8 = $$5.b(rj.m);
+      jr<enl> $$9 = $$0.a(ma.aV);
+      jq<enl> $$10 = $$9.b(ri.a);
+      jq<enl> $$11 = $$9.b(b);
+      jq<enl> $$12 = $$9.b(c);
       $$0.a(
-         elr.a,
-         new eny(
-            new elx.c.a($$1.b(awz.y)).a(Map.of(bvd.a, new eme(eme.a.b, bqp.a(new dgo.c(bul.aC, 1, 1, 1))))).a(emi.c).a(),
-            $$2.b(rd.a),
-            7,
-            ekd.a(ebz.a(0)),
-            true,
-            ebf.a.a
+         a,
+         new enl(
+            $$10,
+            ImmutableList.of(
+               Pair.of(enj.a("village/savanna/town_centers/savanna_meeting_point_1"), 100),
+               Pair.of(enj.a("village/savanna/town_centers/savanna_meeting_point_2"), 50),
+               Pair.of(enj.a("village/savanna/town_centers/savanna_meeting_point_3"), 150),
+               Pair.of(enj.a("village/savanna/town_centers/savanna_meeting_point_4"), 150),
+               Pair.of(enj.a("village/savanna/zombie/town_centers/savanna_meeting_point_1", $$6), 2),
+               Pair.of(enj.a("village/savanna/zombie/town_centers/savanna_meeting_point_2", $$6), 1),
+               Pair.of(enj.a("village/savanna/zombie/town_centers/savanna_meeting_point_3", $$6), 3),
+               Pair.of(enj.a("village/savanna/zombie/town_centers/savanna_meeting_point_4", $$6), 3)
+            ),
+            enl.a.b
          )
       );
-      $$0.a(elr.b, new eoc(new elx.c.a($$1.b(awz.t)).a(ebb.a.d).a(), eoc.a.a));
-      $$0.a(elr.c, new eoc(new elx.c.a($$1.b(awz.u)).a(ebb.a.d).a(), eoc.a.b));
-      $$0.a(elr.d, new eou(new elx.c($$1.b(awz.Q))));
-      $$0.a(elr.e, new eoa(new elx.c($$1.b(awz.s))));
-      $$0.a(elr.f, new ent(new elx.c($$1.b(awz.q))));
-      $$0.a(elr.g, new enx(new elx.c($$1.b(awz.r))));
-      $$0.a(elr.h, new eoo(new elx.c($$1.b(awz.G)), false));
-      $$0.a(elr.i, new eoo(new elx.c($$1.b(awz.F)), true));
-      $$0.a(
-         elr.j,
-         new eos(
-            new elx.c.a($$1.b(awz.J))
-               .a(Map.of(bvd.a, new eme(eme.a.a, bqp.a(new dgo.c(bul.bo, 1, 1, 1))), bvd.b, new eme(eme.a.a, bqp.a(new dgo.c(bul.p, 1, 1, 1)))))
-               .a()
+      ri.a(
+         $$0,
+         "village/savanna/streets",
+         new enl(
+            $$11,
+            ImmutableList.of(
+               Pair.of(enj.a("village/savanna/streets/corner_01", $$7), 2),
+               Pair.of(enj.a("village/savanna/streets/corner_03", $$7), 2),
+               Pair.of(enj.a("village/savanna/streets/straight_02", $$7), 4),
+               Pair.of(enj.a("village/savanna/streets/straight_04", $$7), 7),
+               Pair.of(enj.a("village/savanna/streets/straight_05", $$7), 3),
+               Pair.of(enj.a("village/savanna/streets/straight_06", $$7), 4),
+               Pair.of(enj.a("village/savanna/streets/straight_08", $$7), 4),
+               Pair.of(enj.a("village/savanna/streets/straight_09", $$7), 4),
+               Pair.of(enj.a("village/savanna/streets/straight_10", $$7), 4),
+               Pair.of(enj.a("village/savanna/streets/straight_11", $$7), 4),
+               Pair.of(enj.a("village/savanna/streets/crossroad_02", $$7), 1),
+               Pair.of(enj.a("village/savanna/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(enj.a("village/savanna/streets/crossroad_04", $$7), 2),
+                  Pair.of(enj.a("village/savanna/streets/crossroad_05", $$7), 2),
+                  Pair.of(enj.a("village/savanna/streets/crossroad_06", $$7), 2),
+                  Pair.of(enj.a("village/savanna/streets/crossroad_07", $$7), 2),
+                  Pair.of(enj.a("village/savanna/streets/split_01", $$7), 2),
+                  Pair.of(enj.a("village/savanna/streets/split_02", $$7), 2),
+                  Pair.of(enj.a("village/savanna/streets/turn_01", $$7), 3)
+               }
+            ),
+            enl.a.a
          )
       );
-      $$0.a(elr.k, new eoq(new elx.c.a($$1.b(awz.H)).a(emi.b).a()));
-      $$0.a(
-         elr.l,
-         new eoi(
-            new elx.c.a($$1.b(awz.v))
-               .a(Map.of(bvd.a, new eme(eme.a.b, bqp.a(new dgo.c(bul.Y, 1, 2, 4))), bvd.e, new eme(eme.a.b, dgo.a), bvd.d, new eme(eme.a.b, dgo.a)))
-               .a()
+      ri.a(
+         $$0,
+         "village/savanna/zombie/streets",
+         new enl(
+            $$12,
+            ImmutableList.of(
+               Pair.of(enj.a("village/savanna/zombie/streets/corner_01", $$7), 2),
+               Pair.of(enj.a("village/savanna/zombie/streets/corner_03", $$7), 2),
+               Pair.of(enj.a("village/savanna/zombie/streets/straight_02", $$7), 4),
+               Pair.of(enj.a("village/savanna/zombie/streets/straight_04", $$7), 7),
+               Pair.of(enj.a("village/savanna/zombie/streets/straight_05", $$7), 3),
+               Pair.of(enj.a("village/savanna/zombie/streets/straight_06", $$7), 4),
+               Pair.of(enj.a("village/savanna/zombie/streets/straight_08", $$7), 4),
+               Pair.of(enj.a("village/savanna/zombie/streets/straight_09", $$7), 4),
+               Pair.of(enj.a("village/savanna/zombie/streets/straight_10", $$7), 4),
+               Pair.of(enj.a("village/savanna/zombie/streets/straight_11", $$7), 4),
+               Pair.of(enj.a("village/savanna/zombie/streets/crossroad_02", $$7), 1),
+               Pair.of(enj.a("village/savanna/zombie/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(enj.a("village/savanna/zombie/streets/crossroad_04", $$7), 2),
+                  Pair.of(enj.a("village/savanna/zombie/streets/crossroad_05", $$7), 2),
+                  Pair.of(enj.a("village/savanna/zombie/streets/crossroad_06", $$7), 2),
+                  Pair.of(enj.a("village/savanna/zombie/streets/crossroad_07", $$7), 2),
+                  Pair.of(enj.a("village/savanna/zombie/streets/split_01", $$7), 2),
+                  Pair.of(enj.a("village/savanna/zombie/streets/split_02", $$7), 2),
+                  Pair.of(enj.a("village/savanna/zombie/streets/turn_01", $$7), 3)
+               }
+            ),
+            enl.a.a
          )
       );
-      $$0.a(elr.m, new eok(new elx.c($$1.b(awz.w)), eok.a.b, 0.3F, 0.9F));
-      $$0.a(elr.n, new eok(new elx.c($$1.b(awz.x)), eok.a.a, 0.3F, 0.9F));
-      $$0.a(elr.o, new eoe(new elx.c.a($$1.b(awz.R)).a(Map.of(bvd.a, new eme(eme.a.a, eoe.d))).a(ebb.a.h).a()));
-      $$0.a(elr.p, new eog(new elx.c.a($$1.b(awz.S)).a(ebb.a.h).a(emi.c).a(), ekh.a(ebz.a(32), ebz.c(2))));
-      $$0.a(elr.q, new env(new elx.c($$1.b(awz.W))));
-      $$0.a(elr.r, new enr(new elx.c.a($$1.b(awz.p)).a(ebb.a.d).a()));
-      $$0.a(elr.s, new eny(new elx.c($$1.b(awz.T)), $$2.b(qu.a), 6, ekd.a(ebz.a(33)), false));
-      $$0.a(elr.t, new eny(new elx.c.a($$1.b(awz.L)).a(emi.c).a(), $$2.b(re.a), 6, ekd.a(ebz.a(0)), true, ebf.a.a));
-      $$0.a(elr.u, new eny(new elx.c.a($$1.b(awz.K)).a(emi.c).a(), $$2.b(ra.a), 6, ekd.a(ebz.a(0)), true, ebf.a.a));
-      $$0.a(elr.v, new eny(new elx.c.a($$1.b(awz.M)).a(emi.c).a(), $$2.b(rh.a), 6, ekd.a(ebz.a(0)), true, ebf.a.a));
-      $$0.a(elr.w, new eny(new elx.c.a($$1.b(awz.N)).a(emi.c).a(), $$2.b(ri.a), 6, ekd.a(ebz.a(0)), true, ebf.a.a));
-      $$0.a(elr.x, new eny(new elx.c.a($$1.b(awz.O)).a(emi.c).a(), $$2.b(rm.a), 6, ekd.a(ebz.a(0)), true, ebf.a.a));
-      $$0.a(
-         elr.y,
-         new eom(
-            new elx.c($$1.b(awz.E)),
-            List.of(new eom.a(eol.b.e, 1.0F, 0.2F, false, false, true, false, 0.5F), new eom.a(eol.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
+      ri.a(
+         $$0,
+         "village/savanna/houses",
+         new enl(
+            $$11,
+            ImmutableList.of(
+               Pair.of(enj.a("village/savanna/houses/savanna_small_house_1"), 2),
+               Pair.of(enj.a("village/savanna/houses/savanna_small_house_2"), 2),
+               Pair.of(enj.a("village/savanna/houses/savanna_small_house_3"), 2),
+               Pair.of(enj.a("village/savanna/houses/savanna_small_house_4"), 2),
+               Pair.of(enj.a("village/savanna/houses/savanna_small_house_5"), 2),
+               Pair.of(enj.a("village/savanna/houses/savanna_small_house_6"), 2),
+               Pair.of(enj.a("village/savanna/houses/savanna_small_house_7"), 2),
+               Pair.of(enj.a("village/savanna/houses/savanna_small_house_8"), 2),
+               Pair.of(enj.a("village/savanna/houses/savanna_medium_house_1"), 2),
+               Pair.of(enj.a("village/savanna/houses/savanna_medium_house_2"), 2),
+               Pair.of(enj.a("village/savanna/houses/savanna_butchers_shop_1"), 2),
+               Pair.of(enj.a("village/savanna/houses/savanna_butchers_shop_2"), 2),
+               new Pair[]{
+                  Pair.of(enj.a("village/savanna/houses/savanna_tool_smith_1"), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_fletcher_house_1"), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_shepherd_1"), 7),
+                  Pair.of(enj.a("village/savanna/houses/savanna_armorer_1"), 1),
+                  Pair.of(enj.a("village/savanna/houses/savanna_fisher_cottage_1"), 3),
+                  Pair.of(enj.a("village/savanna/houses/savanna_tannery_1"), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_cartographer_1"), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_library_1"), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_mason_1"), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_weaponsmith_1"), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_weaponsmith_2"), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_temple_1"), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_temple_2"), 3),
+                  Pair.of(enj.a("village/savanna/houses/savanna_large_farm_1", $$8), 4),
+                  Pair.of(enj.a("village/savanna/houses/savanna_large_farm_2", $$8), 6),
+                  Pair.of(enj.a("village/savanna/houses/savanna_small_farm", $$8), 4),
+                  Pair.of(enj.a("village/savanna/houses/savanna_animal_pen_1"), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_animal_pen_2"), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_animal_pen_3"), 2),
+                  Pair.of(enj.h(), 5)
+               }
+            ),
+            enl.a.b
          )
       );
-      $$0.a(elr.z, new eom(new elx.c($$1.b(awz.z)), new eom.a(eol.b.b, 0.0F, 0.0F, false, false, false, false, 1.0F)));
-      $$0.a(elr.A, new eom(new elx.c($$1.b(awz.A)), new eom.a(eol.b.a, 0.5F, 0.8F, true, true, false, false, 1.0F)));
-      $$0.a(elr.B, new eom(new elx.c($$1.b(awz.C)), new eom.a(eol.b.c, 0.0F, 0.5F, false, true, false, false, 1.0F)));
-      $$0.a(
-         elr.C,
-         new eom(
-            new elx.c($$1.b(awz.D)),
-            List.of(new eom.a(eol.b.d, 1.0F, 0.2F, false, false, true, false, 0.5F), new eom.a(eol.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
+      ri.a(
+         $$0,
+         "village/savanna/zombie/houses",
+         new enl(
+            $$12,
+            ImmutableList.of(
+               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_1", $$6), 2),
+               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_2", $$6), 2),
+               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_3", $$6), 2),
+               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_4", $$6), 2),
+               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_5", $$6), 2),
+               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_6", $$6), 2),
+               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_7", $$6), 2),
+               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_8", $$6), 2),
+               Pair.of(enj.a("village/savanna/zombie/houses/savanna_medium_house_1", $$6), 2),
+               Pair.of(enj.a("village/savanna/zombie/houses/savanna_medium_house_2", $$6), 2),
+               Pair.of(enj.a("village/savanna/houses/savanna_butchers_shop_1", $$6), 2),
+               Pair.of(enj.a("village/savanna/houses/savanna_butchers_shop_2", $$6), 2),
+               new Pair[]{
+                  Pair.of(enj.a("village/savanna/houses/savanna_tool_smith_1", $$6), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_fletcher_house_1", $$6), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_shepherd_1", $$6), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_armorer_1", $$6), 1),
+                  Pair.of(enj.a("village/savanna/houses/savanna_fisher_cottage_1", $$6), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_tannery_1", $$6), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_cartographer_1", $$6), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_library_1", $$6), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_mason_1", $$6), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_weaponsmith_1", $$6), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_weaponsmith_2", $$6), 2),
+                  Pair.of(enj.a("village/savanna/houses/savanna_temple_1", $$6), 1),
+                  Pair.of(enj.a("village/savanna/houses/savanna_temple_2", $$6), 3),
+                  Pair.of(enj.a("village/savanna/houses/savanna_large_farm_1", $$6), 4),
+                  Pair.of(enj.a("village/savanna/zombie/houses/savanna_large_farm_2", $$6), 4),
+                  Pair.of(enj.a("village/savanna/houses/savanna_small_farm", $$6), 4),
+                  Pair.of(enj.a("village/savanna/houses/savanna_animal_pen_1", $$6), 2),
+                  Pair.of(enj.a("village/savanna/zombie/houses/savanna_animal_pen_2", $$6), 2),
+                  Pair.of(enj.a("village/savanna/zombie/houses/savanna_animal_pen_3", $$6), 2),
+                  Pair.of(enj.h(), 5)
+               }
+            ),
+            enl.a.b
          )
       );
-      $$0.a(elr.D, new eom(new elx.c($$1.b(awz.B)), new eom.a(eol.b.c, 0.0F, 0.8F, false, false, true, false, 1.0F)));
-      $$0.a(elr.E, new eom(new elx.c($$1.b(awz.V)), new eom.a(eol.b.f, 0.5F, 0.0F, false, false, false, true, 1.0F)));
       $$0.a(
-         elr.F,
-         new eny(
-            new elx.c.a($$1.b(awz.U))
-               .a(Arrays.stream(bvd.values()).collect(Collectors.toMap($$0x -> $$0x, $$0x -> new eme(eme.a.b, bqp.c()))))
-               .a(ebb.a.h)
-               .a(emi.d)
-               .a(),
-            $$2.b(qp.a),
-            Optional.of(ali.b("city_anchor")),
-            7,
-            ekd.a(ebz.a(-27)),
-            false,
-            Optional.empty(),
-            116,
-            List.of(),
-            eny.d,
-            eny.e
+         b,
+         new enl(
+            $$10,
+            ImmutableList.of(
+               Pair.of(enj.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(enj.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(enj.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(enj.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(enj.a("village/savanna/terminators/terminator_05", $$7), 1)
+            ),
+            enl.a.a
          )
       );
-      $$0.a(elr.G, new eny(new elx.c.a($$1.b(awz.P)).a(ebb.a.d).a(emi.b).a(), $$2.b(ro.a), 7, ekd.a(ebz.a(-15)), false, ebf.a.a));
       $$0.a(
-         elr.H,
-         new eny(
-            new elx.c.a($$1.b(awz.I))
-               .a(ebb.a.d)
-               .a(emi.e)
-               .a(Arrays.stream(bvd.values()).collect(Collectors.toMap($$0x -> $$0x, $$0x -> new eme(eme.a.a, bqp.c()))))
-               .a(),
-            $$2.b(rp.a),
-            Optional.empty(),
-            20,
-            ekh.a(ebz.a(-40), ebz.a(-20)),
-            false,
-            Optional.empty(),
-            116,
-            rp.c,
-            new emx(10),
-            epj.a
+         c,
+         new enl(
+            $$10,
+            ImmutableList.of(
+               Pair.of(enj.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(enj.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(enj.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(enj.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(enj.a("village/savanna/zombie/terminators/terminator_05", $$7), 1)
+            ),
+            enl.a.a
+         )
+      );
+      ri.a($$0, "village/savanna/trees", new enl($$10, ImmutableList.of(Pair.of(enj.a($$2), 1)), enl.a.b));
+      ri.a(
+         $$0,
+         "village/savanna/decor",
+         new enl(
+            $$10,
+            ImmutableList.of(
+               Pair.of(enj.a("village/savanna/savanna_lamp_post_01"), 4),
+               Pair.of(enj.a($$2), 4),
+               Pair.of(enj.a($$3), 4),
+               Pair.of(enj.a($$4), 1),
+               Pair.of(enj.h(), 4)
+            ),
+            enl.a.b
+         )
+      );
+      ri.a(
+         $$0,
+         "village/savanna/zombie/decor",
+         new enl(
+            $$10,
+            ImmutableList.of(
+               Pair.of(enj.a("village/savanna/savanna_lamp_post_01", $$6), 4),
+               Pair.of(enj.a($$2), 4),
+               Pair.of(enj.a($$3), 4),
+               Pair.of(enj.a($$4), 1),
+               Pair.of(enj.h(), 4)
+            ),
+            enl.a.b
+         )
+      );
+      ri.a(
+         $$0,
+         "village/savanna/villagers",
+         new enl(
+            $$10,
+            ImmutableList.of(
+               Pair.of(enj.a("village/savanna/villagers/nitwit"), 1),
+               Pair.of(enj.a("village/savanna/villagers/baby"), 1),
+               Pair.of(enj.a("village/savanna/villagers/unemployed"), 10)
+            ),
+            enl.a.b
+         )
+      );
+      ri.a(
+         $$0,
+         "village/savanna/zombie/villagers",
+         new enl(
+            $$10,
+            ImmutableList.of(Pair.of(enj.a("village/savanna/zombie/villagers/nitwit"), 1), Pair.of(enj.a("village/savanna/zombie/villagers/unemployed"), 10)),
+            enl.a.b
          )
       );
    }
