@@ -1,426 +1,250 @@
 import com.google.common.collect.ImmutableList;
 import com.mojang.datafixers.util.Pair;
-import java.util.List;
 
 public class rp {
-   public static final alh<enh> a = rf.a("trial_chambers/chamber/end");
-   public static final alh<enh> b = rf.a("trial_chambers/hallway/fallback");
-   public static final List<enj> c = ImmutableList.builder()
-      .add(
-         enj.a(
-            bql.<List<enj>>a()
-               .a(List.of(enj.a(a("contents/ranged"), a("ranged/skeleton")), enj.a(a("contents/slow_ranged"), a("slow_ranged/skeleton"))))
-               .a(List.of(enj.a(a("contents/ranged"), a("ranged/stray")), enj.a(a("contents/slow_ranged"), a("slow_ranged/stray"))))
-               .a(List.of(enj.a(a("contents/ranged"), a("ranged/poison_skeleton")), enj.a(a("contents/slow_ranged"), a("slow_ranged/poison_skeleton"))))
-               .a()
-         )
-      )
-      .add(enj.a(a("contents/melee"), bql.<String>a().a(a("melee/zombie")).a(a("melee/husk")).a(a("melee/spider")).a()))
-      .add(
-         enj.a(
-            a("contents/small_melee"),
-            bql.<String>a().a(a("small_melee/slime")).a(a("small_melee/cave_spider")).a(a("small_melee/silverfish")).a(a("small_melee/baby_zombie")).a()
-         )
-      )
-      .build();
+   public static final alk<enl> a = ri.a("village/taiga/town_centers");
+   private static final alk<enl> b = ri.a("village/taiga/terminators");
 
-   public static String a(String $$0) {
-      return "trial_chambers/spawner/" + $$0;
-   }
-
-   public static void a(qy<enh> $$0) {
-      jr<enh> $$1 = $$0.a(lz.aV);
-      jq<enh> $$2 = $$1.b(rf.a);
-      jq<enh> $$3 = $$1.b(b);
-      jr<epx> $$4 = $$0.a(lz.aT);
-      jq<epx> $$5 = $$4.b(rg.M);
-      $$0.a(a, new enh($$2, List.of(Pair.of(enf.b("trial_chambers/corridor/end_1", $$5), 1), Pair.of(enf.b("trial_chambers/corridor/end_2", $$5), 1)), enh.a.b));
-      rf.a($$0, "trial_chambers/chamber/entrance_cap", new enh($$2, List.of(Pair.of(enf.b("trial_chambers/chamber/entrance_cap", $$5), 1)), enh.a.b));
-      rf.a(
-         $$0,
-         "trial_chambers/chambers/end",
-         new enh(
-            $$3,
-            List.of(
-               Pair.of(enf.b("trial_chambers/chamber/chamber_1", $$5), 1),
-               Pair.of(enf.b("trial_chambers/chamber/assembly", $$5), 1),
-               Pair.of(enf.b("trial_chambers/chamber/eruption", $$5), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted", $$5), 1)
+   public static void a(rb<enl> $$0) {
+      jr<elf> $$1 = $$0.a(ma.aR);
+      jq<elf> $$2 = $$1.b(su.h);
+      jq<elf> $$3 = $$1.b(su.i);
+      jq<elf> $$4 = $$1.b(su.e);
+      jq<elf> $$5 = $$1.b(su.l);
+      jq<elf> $$6 = $$1.b(su.m);
+      jr<eqb> $$7 = $$0.a(ma.aT);
+      jq<eqb> $$8 = $$7.b(rj.f);
+      jq<eqb> $$9 = $$7.b(rj.d);
+      jq<eqb> $$10 = $$7.b(rj.k);
+      jq<eqb> $$11 = $$7.b(rj.o);
+      jr<enl> $$12 = $$0.a(ma.aV);
+      jq<enl> $$13 = $$12.b(ri.a);
+      jq<enl> $$14 = $$12.b(b);
+      $$0.a(
+         a,
+         new enl(
+            $$13,
+            ImmutableList.of(
+               Pair.of(enj.a("village/taiga/town_centers/taiga_meeting_point_1", $$8), 49),
+               Pair.of(enj.a("village/taiga/town_centers/taiga_meeting_point_2", $$8), 49),
+               Pair.of(enj.a("village/taiga/zombie/town_centers/taiga_meeting_point_1", $$9), 1),
+               Pair.of(enj.a("village/taiga/zombie/town_centers/taiga_meeting_point_2", $$9), 1)
             ),
-            enh.a.b
+            enl.a.b
          )
       );
-      rf.a(
+      ri.a(
          $$0,
-         "trial_chambers/corridor",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.b("trial_chambers/corridor/second_plate"), 1),
-               Pair.of(enf.b("trial_chambers/intersection/intersection_1", $$5), 1),
-               Pair.of(enf.b("trial_chambers/intersection/intersection_2", $$5), 1),
-               Pair.of(enf.b("trial_chambers/intersection/intersection_3", $$5), 1),
-               Pair.of(enf.b("trial_chambers/corridor/first_plate"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/atrium_1", $$5), 1),
-               Pair.of(enf.b("trial_chambers/corridor/entrance_1", $$5), 1),
-               Pair.of(enf.b("trial_chambers/corridor/entrance_2", $$5), 1),
-               Pair.of(enf.b("trial_chambers/corridor/entrance_3", $$5), 1)
+         "village/taiga/streets",
+         new enl(
+            $$14,
+            ImmutableList.of(
+               Pair.of(enj.a("village/taiga/streets/corner_01", $$10), 2),
+               Pair.of(enj.a("village/taiga/streets/corner_02", $$10), 2),
+               Pair.of(enj.a("village/taiga/streets/corner_03", $$10), 2),
+               Pair.of(enj.a("village/taiga/streets/straight_01", $$10), 4),
+               Pair.of(enj.a("village/taiga/streets/straight_02", $$10), 4),
+               Pair.of(enj.a("village/taiga/streets/straight_03", $$10), 4),
+               Pair.of(enj.a("village/taiga/streets/straight_04", $$10), 7),
+               Pair.of(enj.a("village/taiga/streets/straight_05", $$10), 7),
+               Pair.of(enj.a("village/taiga/streets/straight_06", $$10), 4),
+               Pair.of(enj.a("village/taiga/streets/crossroad_01", $$10), 1),
+               Pair.of(enj.a("village/taiga/streets/crossroad_02", $$10), 1),
+               Pair.of(enj.a("village/taiga/streets/crossroad_03", $$10), 2),
+               new Pair[]{
+                  Pair.of(enj.a("village/taiga/streets/crossroad_04", $$10), 2),
+                  Pair.of(enj.a("village/taiga/streets/crossroad_05", $$10), 2),
+                  Pair.of(enj.a("village/taiga/streets/crossroad_06", $$10), 2),
+                  Pair.of(enj.a("village/taiga/streets/turn_01", $$10), 3)
+               }
             ),
-            enh.a.b
+            enl.a.a
          )
       );
-      rf.a(
+      ri.a(
          $$0,
-         "trial_chambers/chamber/addon",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.b("trial_chambers/chamber/addon/full_stacked_walkway"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/addon/full_stacked_walkway_2"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/addon/full_corner_column"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/addon/grate_bridge"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/addon/hanging_platform"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/addon/short_grate_platform"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/addon/short_platform"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/addon/lower_staircase_down"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/addon/walkway_with_bridge_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/addon/c1_breeze"), 1)
+         "village/taiga/zombie/streets",
+         new enl(
+            $$14,
+            ImmutableList.of(
+               Pair.of(enj.a("village/taiga/zombie/streets/corner_01", $$10), 2),
+               Pair.of(enj.a("village/taiga/zombie/streets/corner_02", $$10), 2),
+               Pair.of(enj.a("village/taiga/zombie/streets/corner_03", $$10), 2),
+               Pair.of(enj.a("village/taiga/zombie/streets/straight_01", $$10), 4),
+               Pair.of(enj.a("village/taiga/zombie/streets/straight_02", $$10), 4),
+               Pair.of(enj.a("village/taiga/zombie/streets/straight_03", $$10), 4),
+               Pair.of(enj.a("village/taiga/zombie/streets/straight_04", $$10), 7),
+               Pair.of(enj.a("village/taiga/zombie/streets/straight_05", $$10), 7),
+               Pair.of(enj.a("village/taiga/zombie/streets/straight_06", $$10), 4),
+               Pair.of(enj.a("village/taiga/zombie/streets/crossroad_01", $$10), 1),
+               Pair.of(enj.a("village/taiga/zombie/streets/crossroad_02", $$10), 1),
+               Pair.of(enj.a("village/taiga/zombie/streets/crossroad_03", $$10), 2),
+               new Pair[]{
+                  Pair.of(enj.a("village/taiga/zombie/streets/crossroad_04", $$10), 2),
+                  Pair.of(enj.a("village/taiga/zombie/streets/crossroad_05", $$10), 2),
+                  Pair.of(enj.a("village/taiga/zombie/streets/crossroad_06", $$10), 2),
+                  Pair.of(enj.a("village/taiga/zombie/streets/turn_01", $$10), 3)
+               }
             ),
-            enh.a.b
+            enl.a.a
          )
       );
-      rf.a(
+      ri.a(
          $$0,
-         "trial_chambers/chamber/assembly",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.b("trial_chambers/chamber/assembly/full_column"), 2),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/cover_1"), 2),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/cover_2"), 2),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/cover_3"), 2),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/cover_4"), 2),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/cover_5"), 2),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/cover_6"), 2),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/cover_7"), 5),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/platform_1"), 2),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/spawner_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/hanging_1"), 2),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/hanging_2"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/hanging_3"), 2),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/hanging_4"), 2),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/hanging_5"), 4),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/left_staircase_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/left_staircase_2"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/left_staircase_3"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/right_staircase_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/right_staircase_2"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/assembly/right_staircase_3"), 1)
+         "village/taiga/houses",
+         new enl(
+            $$14,
+            ImmutableList.of(
+               Pair.of(enj.a("village/taiga/houses/taiga_small_house_1", $$8), 4),
+               Pair.of(enj.a("village/taiga/houses/taiga_small_house_2", $$8), 4),
+               Pair.of(enj.a("village/taiga/houses/taiga_small_house_3", $$8), 4),
+               Pair.of(enj.a("village/taiga/houses/taiga_small_house_4", $$8), 4),
+               Pair.of(enj.a("village/taiga/houses/taiga_small_house_5", $$8), 4),
+               Pair.of(enj.a("village/taiga/houses/taiga_medium_house_1", $$8), 2),
+               Pair.of(enj.a("village/taiga/houses/taiga_medium_house_2", $$8), 2),
+               Pair.of(enj.a("village/taiga/houses/taiga_medium_house_3", $$8), 2),
+               Pair.of(enj.a("village/taiga/houses/taiga_medium_house_4", $$8), 2),
+               Pair.of(enj.a("village/taiga/houses/taiga_butcher_shop_1", $$8), 2),
+               Pair.of(enj.a("village/taiga/houses/taiga_tool_smith_1", $$8), 2),
+               Pair.of(enj.a("village/taiga/houses/taiga_fletcher_house_1", $$8), 2),
+               new Pair[]{
+                  Pair.of(enj.a("village/taiga/houses/taiga_shepherds_house_1", $$8), 2),
+                  Pair.of(enj.a("village/taiga/houses/taiga_armorer_house_1", $$8), 1),
+                  Pair.of(enj.a("village/taiga/houses/taiga_armorer_2", $$8), 1),
+                  Pair.of(enj.a("village/taiga/houses/taiga_fisher_cottage_1", $$8), 3),
+                  Pair.of(enj.a("village/taiga/houses/taiga_tannery_1", $$8), 2),
+                  Pair.of(enj.a("village/taiga/houses/taiga_cartographer_house_1", $$8), 2),
+                  Pair.of(enj.a("village/taiga/houses/taiga_library_1", $$8), 2),
+                  Pair.of(enj.a("village/taiga/houses/taiga_masons_house_1", $$8), 2),
+                  Pair.of(enj.a("village/taiga/houses/taiga_weaponsmith_1", $$8), 2),
+                  Pair.of(enj.a("village/taiga/houses/taiga_weaponsmith_2", $$8), 2),
+                  Pair.of(enj.a("village/taiga/houses/taiga_temple_1", $$8), 2),
+                  Pair.of(enj.a("village/taiga/houses/taiga_large_farm_1", $$11), 6),
+                  Pair.of(enj.a("village/taiga/houses/taiga_large_farm_2", $$11), 6),
+                  Pair.of(enj.a("village/taiga/houses/taiga_small_farm_1", $$8), 1),
+                  Pair.of(enj.a("village/taiga/houses/taiga_animal_pen_1", $$8), 2),
+                  Pair.of(enj.h(), 6)
+               }
             ),
-            enh.a.b
+            enl.a.b
          )
       );
-      rf.a(
+      ri.a(
          $$0,
-         "trial_chambers/chamber/eruption",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.b("trial_chambers/chamber/eruption/center_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/eruption/breeze_slice_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/eruption/slice_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/eruption/slice_2"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/eruption/slice_3"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/eruption/quadrant_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/eruption/quadrant_2"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/eruption/quadrant_3"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/eruption/quadrant_4"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/eruption/quadrant_5"), 1)
+         "village/taiga/zombie/houses",
+         new enl(
+            $$14,
+            ImmutableList.of(
+               Pair.of(enj.a("village/taiga/zombie/houses/taiga_small_house_1", $$9), 4),
+               Pair.of(enj.a("village/taiga/zombie/houses/taiga_small_house_2", $$9), 4),
+               Pair.of(enj.a("village/taiga/zombie/houses/taiga_small_house_3", $$9), 4),
+               Pair.of(enj.a("village/taiga/zombie/houses/taiga_small_house_4", $$9), 4),
+               Pair.of(enj.a("village/taiga/zombie/houses/taiga_small_house_5", $$9), 4),
+               Pair.of(enj.a("village/taiga/zombie/houses/taiga_medium_house_1", $$9), 2),
+               Pair.of(enj.a("village/taiga/zombie/houses/taiga_medium_house_2", $$9), 2),
+               Pair.of(enj.a("village/taiga/zombie/houses/taiga_medium_house_3", $$9), 2),
+               Pair.of(enj.a("village/taiga/zombie/houses/taiga_medium_house_4", $$9), 2),
+               Pair.of(enj.a("village/taiga/houses/taiga_butcher_shop_1", $$9), 2),
+               Pair.of(enj.a("village/taiga/zombie/houses/taiga_tool_smith_1", $$9), 2),
+               Pair.of(enj.a("village/taiga/houses/taiga_fletcher_house_1", $$9), 2),
+               new Pair[]{
+                  Pair.of(enj.a("village/taiga/zombie/houses/taiga_shepherds_house_1", $$9), 2),
+                  Pair.of(enj.a("village/taiga/houses/taiga_armorer_house_1", $$9), 1),
+                  Pair.of(enj.a("village/taiga/zombie/houses/taiga_fisher_cottage_1", $$9), 2),
+                  Pair.of(enj.a("village/taiga/houses/taiga_tannery_1", $$9), 2),
+                  Pair.of(enj.a("village/taiga/zombie/houses/taiga_cartographer_house_1", $$9), 2),
+                  Pair.of(enj.a("village/taiga/zombie/houses/taiga_library_1", $$9), 2),
+                  Pair.of(enj.a("village/taiga/houses/taiga_masons_house_1", $$9), 2),
+                  Pair.of(enj.a("village/taiga/houses/taiga_weaponsmith_1", $$9), 2),
+                  Pair.of(enj.a("village/taiga/zombie/houses/taiga_weaponsmith_2", $$9), 2),
+                  Pair.of(enj.a("village/taiga/zombie/houses/taiga_temple_1", $$9), 2),
+                  Pair.of(enj.a("village/taiga/houses/taiga_large_farm_1", $$9), 6),
+                  Pair.of(enj.a("village/taiga/zombie/houses/taiga_large_farm_2", $$9), 6),
+                  Pair.of(enj.a("village/taiga/houses/taiga_small_farm_1", $$9), 1),
+                  Pair.of(enj.a("village/taiga/houses/taiga_animal_pen_1", $$9), 2),
+                  Pair.of(enj.h(), 6)
+               }
             ),
-            enh.a.b
-         )
-      );
-      rf.a(
-         $$0,
-         "trial_chambers/chamber/slanted",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.b("trial_chambers/chamber/slanted/center"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/hallway_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/hallway_2"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/hallway_3"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/quadrant_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/quadrant_2"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/quadrant_3"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/quadrant_4"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/ramp_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/ramp_2"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/ramp_3"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/ramp_4"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/ominous_upper_arm_1"), 1)
-            ),
-            enh.a.b
-         )
-      );
-      rf.a(
-         $$0,
-         "trial_chambers/chamber/pedestal",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.b("trial_chambers/chamber/pedestal/center_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/pedestal/slice_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/pedestal/slice_2"), 3),
-               Pair.of(enf.b("trial_chambers/chamber/pedestal/slice_3"), 3),
-               Pair.of(enf.b("trial_chambers/chamber/pedestal/slice_4"), 3),
-               Pair.of(enf.b("trial_chambers/chamber/pedestal/slice_5"), 3),
-               Pair.of(enf.b("trial_chambers/chamber/pedestal/ominous_slice_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/pedestal/quadrant_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/pedestal/quadrant_2"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/pedestal/quadrant_3"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/quadrant_1"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/quadrant_2"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/quadrant_3"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/slanted/quadrant_4"), 1)
-            ),
-            enh.a.b
-         )
-      );
-      rf.a(
-         $$0,
-         "trial_chambers/corridor/slices",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.b("trial_chambers/corridor/straight_1", $$5), 1),
-               Pair.of(enf.b("trial_chambers/corridor/straight_2", $$5), 2),
-               Pair.of(enf.b("trial_chambers/corridor/straight_3", $$5), 2),
-               Pair.of(enf.b("trial_chambers/corridor/straight_4", $$5), 2),
-               Pair.of(enf.b("trial_chambers/corridor/straight_5", $$5), 2),
-               Pair.of(enf.b("trial_chambers/corridor/straight_6", $$5), 2),
-               Pair.of(enf.b("trial_chambers/corridor/straight_7", $$5), 1),
-               Pair.of(enf.b("trial_chambers/corridor/straight_8", $$5), 2)
-            ),
-            enh.a.b
+            enl.a.b
          )
       );
       $$0.a(
          b,
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.b("trial_chambers/hallway/rubble"), 1),
-               Pair.of(enf.b("trial_chambers/hallway/rubble_chamber"), 1),
-               Pair.of(enf.b("trial_chambers/hallway/rubble_thin"), 1),
-               Pair.of(enf.b("trial_chambers/hallway/rubble_chamber_thin"), 1)
+         new enl(
+            $$13,
+            ImmutableList.of(
+               Pair.of(enj.a("village/plains/terminators/terminator_01", $$10), 1),
+               Pair.of(enj.a("village/plains/terminators/terminator_02", $$10), 1),
+               Pair.of(enj.a("village/plains/terminators/terminator_03", $$10), 1),
+               Pair.of(enj.a("village/plains/terminators/terminator_04", $$10), 1)
             ),
-            enh.a.b
+            enl.a.a
          )
       );
-      rf.a(
+      ri.a(
          $$0,
-         "trial_chambers/hallway",
-         new enh(
-            $$3,
-            List.of(
-               Pair.of(enf.b("trial_chambers/hallway/corridor_connector_1"), 1),
-               Pair.of(enf.b("trial_chambers/hallway/upper_hallway_connector", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/lower_hallway_connector", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/rubble"), 1),
-               Pair.of(enf.b("trial_chambers/chamber/chamber_1", $$5), 150),
-               Pair.of(enf.b("trial_chambers/chamber/chamber_2", $$5), 150),
-               Pair.of(enf.b("trial_chambers/chamber/chamber_4", $$5), 150),
-               Pair.of(enf.b("trial_chambers/chamber/chamber_8", $$5), 150),
-               Pair.of(enf.b("trial_chambers/chamber/assembly", $$5), 150),
-               Pair.of(enf.b("trial_chambers/chamber/eruption", $$5), 150),
-               Pair.of(enf.b("trial_chambers/chamber/slanted", $$5), 150),
-               Pair.of(enf.b("trial_chambers/chamber/pedestal", $$5), 150),
-               Pair.of(enf.b("trial_chambers/hallway/rubble_chamber", $$5), 10),
-               Pair.of(enf.b("trial_chambers/hallway/rubble_chamber_thin", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/cache_1", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/left_corner", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/right_corner", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/corner_staircase", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/corner_staircase_down", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/long_straight_staircase", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/long_straight_staircase_down", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/straight", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/straight_staircase", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/straight_staircase_down", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/trapped_staircase", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/encounter_1", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/encounter_2", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/encounter_3", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/encounter_4", $$5), 1),
-               Pair.of(enf.b("trial_chambers/hallway/encounter_5", $$5), 1)
+         "village/taiga/decor",
+         new enl(
+            $$13,
+            ImmutableList.of(
+               Pair.of(enj.a("village/taiga/taiga_lamp_post_1"), 10),
+               Pair.of(enj.a("village/taiga/taiga_decoration_1"), 4),
+               Pair.of(enj.a("village/taiga/taiga_decoration_2"), 1),
+               Pair.of(enj.a("village/taiga/taiga_decoration_3"), 1),
+               Pair.of(enj.a("village/taiga/taiga_decoration_4"), 1),
+               Pair.of(enj.a("village/taiga/taiga_decoration_5"), 2),
+               Pair.of(enj.a("village/taiga/taiga_decoration_6"), 1),
+               Pair.of(enj.a($$2), 4),
+               Pair.of(enj.a($$3), 4),
+               Pair.of(enj.a($$4), 2),
+               Pair.of(enj.a($$5), 4),
+               Pair.of(enj.a($$6), 1),
+               new Pair[]{Pair.of(enj.h(), 4)}
             ),
-            enh.a.b
+            enl.a.b
          )
       );
-      rf.a(
+      ri.a(
          $$0,
-         "trial_chambers/corridors/addon/lower",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.h(), 8),
-               Pair.of(enf.b("trial_chambers/corridor/addon/staircase"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/addon/wall"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/addon/ladder_to_middle"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/addon/arrow_dispenser"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/addon/bridge_lower"), 2)
+         "village/taiga/zombie/decor",
+         new enl(
+            $$13,
+            ImmutableList.of(
+               Pair.of(enj.a("village/taiga/taiga_decoration_1"), 4),
+               Pair.of(enj.a("village/taiga/taiga_decoration_2"), 1),
+               Pair.of(enj.a("village/taiga/taiga_decoration_3"), 1),
+               Pair.of(enj.a("village/taiga/taiga_decoration_4"), 1),
+               Pair.of(enj.a($$2), 4),
+               Pair.of(enj.a($$3), 4),
+               Pair.of(enj.a($$4), 2),
+               Pair.of(enj.a($$5), 4),
+               Pair.of(enj.a($$6), 1),
+               Pair.of(enj.h(), 4)
             ),
-            enh.a.b
+            enl.a.b
          )
       );
-      rf.a(
+      ri.a(
          $$0,
-         "trial_chambers/corridors/addon/middle",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.h(), 8),
-               Pair.of(enf.b("trial_chambers/corridor/addon/open_walkway"), 2),
-               Pair.of(enf.b("trial_chambers/corridor/addon/walled_walkway"), 1)
+         "village/taiga/villagers",
+         new enl(
+            $$13,
+            ImmutableList.of(
+               Pair.of(enj.a("village/taiga/villagers/nitwit"), 1),
+               Pair.of(enj.a("village/taiga/villagers/baby"), 1),
+               Pair.of(enj.a("village/taiga/villagers/unemployed"), 10)
             ),
-            enh.a.b
+            enl.a.b
          )
       );
-      rf.a(
+      ri.a(
          $$0,
-         "trial_chambers/corridors/addon/middle_upper",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.h(), 6),
-               Pair.of(enf.b("trial_chambers/corridor/addon/open_walkway_upper"), 2),
-               Pair.of(enf.b("trial_chambers/corridor/addon/chandelier_upper"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/addon/decoration_upper"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/addon/head_upper"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/addon/reward_upper"), 1)
-            ),
-            enh.a.b
+         "village/taiga/zombie/villagers",
+         new enl(
+            $$13,
+            ImmutableList.of(Pair.of(enj.a("village/taiga/zombie/villagers/nitwit"), 1), Pair.of(enj.a("village/taiga/zombie/villagers/unemployed"), 10)),
+            enl.a.b
          )
       );
-      rf.a(
-         $$0,
-         "trial_chambers/atrium",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.b("trial_chambers/corridor/atrium/bogged_relief"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/atrium/breeze_relief"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/atrium/spiral_relief"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/atrium/spider_relief"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/atrium/grand_staircase_1"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/atrium/grand_staircase_2"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/atrium/grand_staircase_3"), 1)
-            ),
-            enh.a.b
-         )
-      );
-      rf.a(
-         $$0,
-         "trial_chambers/decor",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.h(), 22),
-               Pair.of(enf.b("trial_chambers/decor/empty_pot"), 2),
-               Pair.of(enf.b("trial_chambers/decor/dead_bush_pot"), 2),
-               Pair.of(enf.b("trial_chambers/decor/undecorated_pot"), 10),
-               Pair.of(enf.b("trial_chambers/decor/flow_pot"), 1),
-               Pair.of(enf.b("trial_chambers/decor/guster_pot"), 1),
-               Pair.of(enf.b("trial_chambers/decor/scrape_pot"), 1),
-               Pair.of(enf.b("trial_chambers/decor/candle_1"), 1),
-               Pair.of(enf.b("trial_chambers/decor/candle_2"), 1),
-               Pair.of(enf.b("trial_chambers/decor/candle_3"), 1),
-               Pair.of(enf.b("trial_chambers/decor/candle_4"), 1),
-               Pair.of(enf.b("trial_chambers/decor/barrel"), 2)
-            ),
-            enh.a.b
-         )
-      );
-      rf.a($$0, "trial_chambers/decor/disposal", new enh($$2, List.of(Pair.of(enf.b("trial_chambers/decor/disposal"), 1)), enh.a.b));
-      rf.a(
-         $$0,
-         "trial_chambers/decor/bed",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.b("trial_chambers/decor/white_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/light_gray_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/gray_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/black_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/brown_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/red_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/orange_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/yellow_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/lime_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/green_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/cyan_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/light_blue_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/blue_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/purple_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/magenta_bed"), 3),
-               Pair.of(enf.b("trial_chambers/decor/pink_bed"), 1)
-            ),
-            enh.a.b
-         )
-      );
-      rf.a(
-         $$0,
-         "trial_chambers/entrance",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.b("trial_chambers/corridor/addon/display_1"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/addon/display_2"), 1),
-               Pair.of(enf.b("trial_chambers/corridor/addon/display_3"), 1)
-            ),
-            enh.a.b
-         )
-      );
-      rf.a($$0, "trial_chambers/decor/chamber", new enh($$2, List.of(Pair.of(enf.h(), 4), Pair.of(enf.b("trial_chambers/decor/undecorated_pot"), 1)), enh.a.b));
-      rf.a($$0, "trial_chambers/reward/all", new enh($$2, List.of(Pair.of(enf.b("trial_chambers/reward/vault"), 1)), enh.a.b));
-      rf.a($$0, "trial_chambers/reward/ominous_vault", new enh($$2, List.of(Pair.of(enf.b("trial_chambers/reward/ominous_vault"), 1)), enh.a.b));
-      rf.a($$0, "trial_chambers/reward/contents/default", new enh($$2, List.of(Pair.of(enf.b("trial_chambers/reward/vault"), 1)), enh.a.b));
-      rf.a($$0, "trial_chambers/chests/supply", new enh($$2, List.of(Pair.of(enf.b("trial_chambers/chests/connectors/supply"), 1)), enh.a.b));
-      rf.a($$0, "trial_chambers/chests/contents/supply", new enh($$2, List.of(Pair.of(enf.b("trial_chambers/chests/supply"), 1)), enh.a.b));
-      rf.a($$0, "trial_chambers/spawner/ranged", new enh($$2, List.of(Pair.of(enf.b("trial_chambers/spawner/connectors/ranged"), 1)), enh.a.b));
-      rf.a($$0, "trial_chambers/spawner/slow_ranged", new enh($$2, List.of(Pair.of(enf.b("trial_chambers/spawner/connectors/slow_ranged"), 1)), enh.a.b));
-      rf.a($$0, "trial_chambers/spawner/melee", new enh($$2, List.of(Pair.of(enf.b("trial_chambers/spawner/connectors/melee"), 1)), enh.a.b));
-      rf.a($$0, "trial_chambers/spawner/small_melee", new enh($$2, List.of(Pair.of(enf.b("trial_chambers/spawner/connectors/small_melee"), 1)), enh.a.b));
-      rf.a($$0, "trial_chambers/spawner/breeze", new enh($$2, List.of(Pair.of(enf.b("trial_chambers/spawner/connectors/breeze"), 1)), enh.a.b));
-      rf.a(
-         $$0,
-         "trial_chambers/spawner/all",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.b("trial_chambers/spawner/connectors/ranged"), 1),
-               Pair.of(enf.b("trial_chambers/spawner/connectors/melee"), 1),
-               Pair.of(enf.b("trial_chambers/spawner/connectors/small_melee"), 1)
-            ),
-            enh.a.b
-         )
-      );
-      rf.a($$0, "trial_chambers/spawner/contents/breeze", new enh($$2, List.of(Pair.of(enf.b("trial_chambers/spawner/breeze/breeze"), 1)), enh.a.b));
-      rf.a(
-         $$0,
-         "trial_chambers/dispensers/chamber",
-         new enh(
-            $$2,
-            List.of(
-               Pair.of(enf.h(), 1),
-               Pair.of(enf.b("trial_chambers/dispensers/chamber"), 1),
-               Pair.of(enf.b("trial_chambers/dispensers/wall_dispenser"), 1),
-               Pair.of(enf.b("trial_chambers/dispensers/floor_dispenser"), 1)
-            ),
-            enh.a.b
-         )
-      );
-      enk.a($$0, $$2, c);
    }
 }
