@@ -1,53 +1,19 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class sb {
-   public static final alh<edx<?, ?>> a = rz.a("delta");
-   public static final alh<edx<?, ?>> b = rz.a("small_basalt_columns");
-   public static final alh<edx<?, ?>> c = rz.a("large_basalt_columns");
-   public static final alh<edx<?, ?>> d = rz.a("basalt_blobs");
-   public static final alh<edx<?, ?>> e = rz.a("blackstone_blobs");
-   public static final alh<edx<?, ?>> f = rz.a("glowstone_extra");
-   public static final alh<edx<?, ?>> g = rz.a("crimson_forest_vegetation");
-   public static final alh<edx<?, ?>> h = rz.a("crimson_forest_vegetation_bonemeal");
-   public static final alh<edx<?, ?>> i = rz.a("warped_forest_vegetation");
-   public static final alh<edx<?, ?>> j = rz.a("warped_forest_vegetation_bonemeal");
-   public static final alh<edx<?, ?>> k = rz.a("nether_sprouts");
-   public static final alh<edx<?, ?>> l = rz.a("nether_sprouts_bonemeal");
-   public static final alh<edx<?, ?>> m = rz.a("twisting_vines");
-   public static final alh<edx<?, ?>> n = rz.a("twisting_vines_bonemeal");
-   public static final alh<edx<?, ?>> o = rz.a("weeping_vines");
-   public static final alh<edx<?, ?>> p = rz.a("patch_crimson_roots");
-   public static final alh<edx<?, ?>> q = rz.a("basalt_pillar");
-   public static final alh<edx<?, ?>> r = rz.a("spring_lava_nether");
-   public static final alh<edx<?, ?>> s = rz.a("spring_nether_closed");
-   public static final alh<edx<?, ?>> t = rz.a("spring_nether_open");
-   public static final alh<edx<?, ?>> u = rz.a("patch_fire");
-   public static final alh<edx<?, ?>> v = rz.a("patch_soul_fire");
+   public static final alk<eeb<?, ?>> a = sc.a("end_platform");
+   public static final alk<eeb<?, ?>> b = sc.a("end_spike");
+   public static final alk<eeb<?, ?>> c = sc.a("end_gateway_return");
+   public static final alk<eeb<?, ?>> d = sc.a("end_gateway_delayed");
+   public static final alk<eeb<?, ?>> e = sc.a("chorus_plant");
+   public static final alk<eeb<?, ?>> f = sc.a("end_island");
 
-   public static void a(qy<edx<?, ?>> $$0) {
-      rz.a($$0, a, eel.aa, new egl(dig.H.m(), dig.kJ.m(), bro.a(3, 7), bro.a(0, 2)));
-      rz.a($$0, b, eel.Z, new egj(brf.a(1), bro.a(1, 4)));
-      rz.a($$0, c, eel.Z, new egj(bro.a(2, 3), bro.a(5, 10)));
-      rz.a($$0, d, eel.ab, new ehe(dig.dV.m(), dig.dY.m(), bro.a(3, 7)));
-      rz.a($$0, e, eel.ab, new ehe(dig.dV.m(), dig.pr.m(), bro.a(3, 7)));
-      rz.a($$0, f, eel.t);
-      eja $$1 = new eja(bql.<dvj>a().a(dig.oD.m(), 87).a(dig.ox.m(), 11).a(dig.oo.m(), 1));
-      rz.a($$0, g, eel.W, new egv($$1, 8, 4));
-      rz.a($$0, h, eel.W, new egv($$1, 3, 1));
-      eja $$2 = new eja(bql.<dvj>a().a(dig.oq.m(), 85).a(dig.oD.m(), 1).a(dig.oo.m(), 13).a(dig.ox.m(), 1));
-      rz.a($$0, i, eel.W, new egv($$2, 8, 4));
-      rz.a($$0, j, eel.W, new egv($$2, 3, 1));
-      rz.a($$0, k, eel.W, new egv(eiq.a(dig.or), 8, 4));
-      rz.a($$0, l, eel.W, new egv(eiq.a(dig.or), 3, 1));
-      rz.a($$0, m, eel.Y, new ehm(8, 4, 8));
-      rz.a($$0, n, eel.Y, new ehm(3, 1, 2));
-      rz.a($$0, o, eel.X);
-      rz.a($$0, p, eel.i, rz.a(eel.T, new ehh(eiq.a(dig.oD))));
-      rz.a($$0, q, eel.ae);
-      rz.a($$0, r, eel.k, new ehk(erl.e.g(), true, 4, 1, ju.a(die::p, dig.dV, dig.dW, dig.L, dig.kJ, dig.pr)));
-      rz.a($$0, s, eel.k, new ehk(erl.e.g(), false, 5, 0, ju.a(die::p, dig.dV)));
-      rz.a($$0, t, eel.k, new ehk(erl.e.g(), false, 4, 1, ju.a(die::p, dig.dV)));
-      rz.a($$0, u, eel.i, rz.a(eel.T, new ehh(eiq.a(dig.cr)), List.of(dig.dV)));
-      rz.a($$0, v, eel.i, rz.a(eel.T, new ehh(eiq.a(dig.cs)), List.of(dig.dX)));
+   public static void a(rb<eeb<?, ?>> $$0) {
+      sc.a($$0, a, eep.J);
+      sc.a($$0, b, eep.K, new ehn(false, ImmutableList.of(), null));
+      sc.a($$0, c, eep.M, egs.a(arq.a, true));
+      sc.a($$0, d, eep.M, egs.a());
+      sc.a($$0, e, eep.l);
+      sc.a($$0, f, eep.L);
    }
 }
